Fixed navbar button displaying under logo on small screens

--- a/style.css
+++ b/style.css
@@ -52,5 +52,5 @@ footer
 
 .menu-logo
 {
-  width: 5%;
+  width: 8%;
 }
